@@ -3,7 +3,6 @@ package io.xcutiboo.mythicrod.paper.drops;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.bukkit.Material;
 import org.bukkit.enchantments.Enchantment;
@@ -56,7 +55,7 @@ public class PaperCustomDrop extends CustomDrop {
         if (getLore() != null && !getLore().isEmpty()) {
             List<Component> loreComponents = getLore().stream()
                 .map(line -> LegacyComponentSerializer.legacyAmpersand().deserialize(line))
-                .collect(Collectors.toList());
+                .toList();
             meta.lore(loreComponents);
         }
 
